umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_hexamethylbenzene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3d
order: 12
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
  - - C(6)
    - C(7)
    - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
    - H(17)
  - - H(18)
    - H(19)
    - H(20)
    - H(21)
    - H(22)
    - H(23)
    - H(24)
    - H(25)
    - H(26)
    - H(27)
    - H(28)
    - H(29)
