umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_hydrogenperoxide.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2
order: 2
equivalence_sets:
  - - H(0)
    - O(1)
  - - O(2)
    - H(3)
