umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_hypochloric_acid.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Cs
order: 2
equivalence_sets:
  - - H(0)
  - - O(1)
  - - Cl(2)
