umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_iodineheptafluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D5h
order: 20
equivalence_sets:
  - - I(0)
  - - F(1)
    - F(2)
    - F(3)
    - F(4)
    - F(5)
  - - F(6)
    - F(7)
