umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_ironpentacarbonyl.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D3h
order: 12
equivalence_sets:
  - - Fe(0)
  - - C(1)
    - C(2)
    - C(3)
  - - C(4)
    - C(5)
  - - O(6)
    - O(7)
    - O(8)
  - - O(9)
    - O(10)
