umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_kekulene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D6h
order: 24
equivalence_sets:
  - - H(0)
    - H(1)
    - H(2)
    - H(3)
    - H(4)
    - H(5)
  - - C(6)
    - C(7)
    - C(8)
    - C(9)
    - C(10)
    - C(11)
  - - C(12)
    - C(13)
    - C(14)
    - C(15)
    - C(16)
    - C(17)
    - C(18)
    - C(19)
    - C(20)
    - C(21)
    - C(22)
    - C(23)
  - - C(24)
    - C(25)
    - C(26)
    - C(27)
    - C(28)
    - C(29)
    - C(30)
    - C(31)
    - C(32)
    - C(33)
    - C(34)
    - C(35)
  - - C(36)
    - C(37)
    - C(38)
    - C(39)
    - C(40)
    - C(41)
    - C(42)
    - C(43)
    - C(44)
    - C(45)
    - C(46)
    - C(47)
  - - H(48)
    - H(49)
    - H(50)
    - H(51)
    - H(52)
    - H(53)
    - H(54)
    - H(55)
    - H(56)
    - H(57)
    - H(58)
    - H(59)
  - - C(60)
    - C(61)
    - C(62)
    - C(63)
    - C(64)
    - C(65)
  - - H(66)
    - H(67)
    - H(68)
    - H(69)
    - H(70)
    - H(71)
